--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   bubble_bottom_bar: ^1.2.0
   percent_indicator: "^1.0.15"
   intl: ^0.15.7
+  flutter_pdf_viewer: ^0.0.3
 
 
 dev_dependencies:
@@ -58,6 +59,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - images/
+   - files/   
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
