--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   percent_indicator: "^1.0.15"
   intl: ^0.15.7
   flutter_pdf_viewer: ^0.0.3
+  rflutter_alert:
+  flutter_local_notifications:
 
 
 dev_dependencies:
