--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,12 +45,12 @@ android {
         versionName flutterVersionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         // Generate app / 32bits and 64 bits (PDF Reader)
-        /*ndk {
+        ndk {
            // 64 Bits
-           abiFilters "arm64-v8a"
+            abiFilters "arm64-v8a"
            // 32 Bits
-           abiFilters "armeabi-v7a"
-        }*/
+           // abiFilters "armeabi-v7a"
+        }
     }
 
     buildTypes {
