--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,8 +46,9 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         // Generate app / 32bits and 64 bits (PDF Reader)
         ndk {
+           abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86', 'armeabi'
            // 64 Bits
-            abiFilters "arm64-v8a"
+           // abiFilters "arm64-v8a"
            // 32 Bits
            // abiFilters "armeabi-v7a"
         }
